tests/valid/valid_global_annotation.csl
config Deprecation {
  old_key: number @deprecated("Use new_key instead.");
  new_key: number;
}
