tests/invalid/invalid_raw_string_delimiter_length.csl
config InvalidRawStringDelim {
  s: string = R"ABCDEFGHIJKLMNOPQ(content)ABCDEFGHIJKLMNOPQ";
}
